--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@nativescript-community/ui-lottie": "^4.3.2",
     "@nativescript/core": "~8.1.1",
     "@nativescript/theme": "~3.0.1"
   },
   "devDependencies": {
+    "@nativescript/android": "8.1.1",
     "@nativescript/types": "~8.1.1",
     "@nativescript/webpack": "~5.0.0",
     "typescript": "~4.3.5"
